<resources>
    <string name="app_name">RhythmTapGame</string>
    <string name="_1_00">1:00</string>
    <string name="restart">Restart</string>
    <string name="main_menu">Main Menu</string>
    <string name="game_over">GAME OVER</string>
    <string name="level_1">LEVEL 1</string>
    <string name="beat">BEAT</string>
    <string name="tiles">TILES</string>
    <string name="press_play">PRESS PLAY</string>
    <string name="start_game">Start Game</string>
    <string name="freezeCountNum">2</string>
    <string name="clearCountNum">4</string>
    <string name="addCountNum">0</string>
    <string name="freeze_icon">Freeze Icon</string>
    <string name="clear_icon">Clear Icon</string>
    <string name="add_time_icon">Add Time Icon</string>
    <string name="time_left">TIME LEFT</string>
    <string name="time_left2">TIME LEFT</string>
    <string name="time_left_main">TIME LEFT</string>
    <string name="_0_30_">0:30</string>
    <string name="_0_30_1">0:30</string>
    <string name="_0_30_main">0:30</string>
    <string name="play">PLAY</string>
    <string name="shadow1_play">PLAY</string>
    <string name="shadow2_play">PLAY</string>
    <string name="leader_board">LEADER BOARD</string>
    <string name="leader_board_shadow1">LEADER BOARD</string>
    <string name="leader_board_shadow2">LEADER BOARD</string>
    <string name="beat_tiles">BEAT TILES</string>
    <string name="beat_tiles_shadow1">BEAT TILES</string>
    <string name="beat_tiles_shadow2">BEAT TILES</string>
    <string name="press_play_shadow1">PRESS PLAY</string>
    <string name="press_play_shadow2">PRESS PLAY</string>
    <string name="play_icon">Play Icon</string>
    <string name="leaderboard_icon">Leaderboard Icon</string>
    <string name="shop">SHOP</string>
    <string name="shop_shadow1">SHOP</string>
    <string name="shop_shadow2">SHOP</string>
    <string name="shop_icon">Shop Icon</string>
    <string name="pause_button">Pause</string>
    <string name="resume">RESUME</string>
    <string name="resume_shadow1">RESUME</string>
    <string name="resume_shadow2">RESUME</string>
    <string name="shop_pause">SHOP</string>
    <string name="shop_pause_shadow_1">SHOP</string>
    <string name="shop_pause_shadow1">SHOP</string>
    <string name="main_menu_pause">MAIN MENU</string>
    <string name="main_menu_pause_shadow1">MAIN MENU</string>
    <string name="main_menu_pause_shadow2">MAIN MENU</string>
    <string name="score_1234567">SCORE: 1234567</string>
    <string name="score_1234567_2">SCORE: 1234567</string>
    <string name="score_1234567_3">SCORE: 1234567</string>
    <string name="lvl_1">LVL 1</string>
    <string name="paused">PAUSED</string>
    <string name="level_25">LEVEL 25</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="app_id">360829953210</string>
    <string name="leaderboard_id">CgkIusmQmcAKEAIQAQ</string>
    <string name="clipboard">clipboard</string>
    <string name="_1">1</string>
    <string name="player_name">Player Name</string>
    <string name="_10000">10000</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_saved_successfully">SETTINGS SAVED SUCCESSFULLY</string>
    <string name="_80">80%</string>
    <string name="save">SAVE</string>
    <string name="exit">EXIT</string>
    <string name="music">MUSIC</string>
    <string name="sound_effects">SOUND EFFECTS</string>
    <string name="rank_1">RANK 1</string>
    <string name="rank_11">RANK 11</string>
    <string name="rank_up">RANK UP!</string>
    <string name="xp_123456789">XP 123456789</string>
    <string name="use_life">USE LIFE?</string>
    <string name="xp_progress_num">123456788/123456789</string>
    <string name="rewards">REWARDS</string>
    <string name="_10">10</string>
    <string name="accept">ACCEPT</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="player_1">PLAYER 1</string>
    <string name="_1234567">1234567</string>
    <string name="_2">2</string>
    <string name="player_2">PLAYER 2</string>
    <string name="_3">3</string>
    <string name="player_3">PLAYER 3</string>
    <string name="rank">RANK</string>
    <string name="_11">11</string>
    <string name="next_rank">NEXT RANK</string>
    <string name="beat_coin_icon">Beat Coin Icon</string>
    <string name="_1000">1000</string>
    <string name="objectives">OBJECTIVES</string>
    <string name="daily_objectives">DAILY OBJECTIVES</string>
    <string name="refresh">REFRESH</string>
    <string name="complete_objectives">COMPLETE 2 OBJECTIVES TO UNLOCK NEW CHALLENGES</string>
    <string name="beat_coins">BEAT COINS</string>
    <string name="small_beat_coin_pack">SMALL BEAT COIN PACK</string>
    <string name="_0_99">$0.99</string>
    <string name="reward_claimed">Reward Claimed</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="quit">QUIT</string>

</resources>