<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#304fff">


    <TextView
        android:id="@+id/pressPlayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_play"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:shadowColor="#000000"
        android:shadowDx="20"
        android:shadowDy="15"
        android:shadowRadius="30"
        android:textStyle="bold"
        android:fontFamily="@font/orbitron"
        app:layout_constraintTop_toBottomOf="@+id/playButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1" />


    <TextView
        android:id="@+id/titleText2"
        android:layout_width="227dp"
        android:layout_height="99dp"
        android:fontFamily="@font/orbitron"
        android:scaleX="0.99"
        android:scaleY="3"
        android:shadowColor="#000000"
        android:shadowDx="20"
        android:shadowDy="15"
        android:shadowRadius="30"
        android:text="@string/tiles"
        android:textColor="#FFFFFF"
        android:textSize="63sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/playButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="227dp"
        android:layout_height="99dp"
        android:fontFamily="@font/orbitron"
        android:scaleX="0.99"
        android:scaleY="3"
        android:shadowColor="#000000"
        android:shadowDx="20"
        android:shadowDy="15"
        android:shadowRadius="30"
        android:text="@string/beat"
        android:textColor="#FFFFFF"
        android:textSize="63sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="265dp"
        android:layout_height="265dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:contentDescription="@string/start_game"
        android:src="@drawable/playbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>
