<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp">


        <View
            android:id="@+id/rectangle_1_shadow"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="#4E3A3A"
            android:translationY="2.5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/playAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@drawable/rectangle_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="310dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/_1"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player_name"
            android:layout_width="wrap_content"
            android:maxWidth="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/player_name"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="277dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/_10000"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
