<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6000000"
    android:clickable="true"
    android:focusable="true">


    <ImageView
        android:id="@+id/exit_ButtonObj"
        android:layout_width="55dp"
        android:layout_height="70dp"
        android:layout_marginStart="293dp"
        android:layout_marginBottom="658dp"
        android:contentDescription="Exit Button"
        android:paddingTop="5dp"
        android:src="@drawable/exit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="613dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_black"
            android:text="@string/objectives"
            android:textColor="#2C1C1C"
            android:textSize="45sp"
            android:translationY="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_black"
            android:text="@string/objectives"
            android:textColor="#4E3A3A"
            android:textSize="45sp"
            android:translationY="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_black"
            android:text="@string/objectives"
            android:textColor="#FFFFFF"
            android:textSize="45sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="560dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/completeObjectiveText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_black"
            android:text="@string/complete_objectives"
            android:textAlignment="center"
            android:textColor="#2C1C1C"
            android:textSize="20sp"
            android:translationY="4dp" />

        <TextView
            android:id="@+id/completeObjectiveText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_black"
            android:text="@string/complete_objectives"
            android:textAlignment="center"
            android:textColor="#4E3A3A"
            android:textSize="20sp"
            android:translationY="2dp" />

        <TextView
            android:id="@+id/completeObjectiveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_black"
            android:text="@string/complete_objectives"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/leaderboard_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginBottom="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781">

        <LinearLayout
            android:id="@+id/objectives_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

        </LinearLayout>


    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="438dp"
        android:layout_marginBottom="237dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_black"
            android:text="@string/daily_objectives"
            android:textColor="#2C1C1C"
            android:textSize="30sp"
            android:translationY="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_black"
            android:text="@string/daily_objectives"
            android:textColor="#4E3A3A"
            android:textSize="30sp"
            android:translationY="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_black"
            android:text="@string/daily_objectives"
            android:textColor="#7D60CE"
            android:textSize="30sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/timeLeftObj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="488dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="203dp"
        android:fontFamily="@font/roboto_black"
        android:text="TIME LEFT: 12:30:30"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994">


        <LinearLayout
            android:id="@+id/daily_objectives_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>